# StellaSora-Tool-main-2.-

./: CMakeLists.txt  README.md  StellaSora-Tool.sln
.github/workflows/: build.yml
src/: CheatMenu.h  Feature.h  dllmain.cpp  framework.h  main.cpp  pch.h
src/appdata/: helpers.cpp  helpers.h  il2cpp-api-functions-ptr.h  il2cpp-api-functions.h  il2cpp-functions.h  il2cpp-init.cpp  il2cpp-metadata-version.h  il2cpp-types-ptr.h
src/cheat/: HitEffect.cpp  HitEffect.h  InstantBreak.cpp  InstantBreak.h  MobVacuum.cpp  MobVacuum.h  NoCD.cpp  NoCD.h  StatModifier.cpp
src/cheat/misc/: About.cpp  About.h
src/render/: dx11-hook.cpp  dx11-hook.h  gui-util.cpp  gui-util.h  renderer.cpp  renderer.h
src/util/: HookManager.h  Logger.h
